[gd_scene load_steps=2 format=3 uid="uid://dipfrvy2wpuqd"]

[ext_resource type="Script" path="res://scripts/components/store_component.gd" id="1_f8xr5"]

[node name="StoreComponent" type="PanelContainer"]
custom_minimum_size = Vector2(200, 50)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -52.0
offset_right = 100.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f8xr5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StoreNameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Store"

[node name="VFlowContainer" type="VFlowContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="CurrencyNameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VFlowContainer"]
layout_mode = 2
text = "Units:"

[node name="CurrencyAmountLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VFlowContainer"]
layout_mode = 2
text = "10000"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="ItemHeaderLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Upgrade"

[node name="ItemLevelLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Level
"

[node name="ItemCostLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Cost"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Close"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/CloseButton" to="." method="_on_close_button_pressed"]
